--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
-   <header id="banner" class="padding">   
+   <header id="banner" id="home" class="padding">   
         <nav class="navbar display">
             <div class="fitness">Fitness</div>
-            <div>
+            <div class="dropdown">
                 <ul class="navlist display">
-                    <li class="align-items"><a href="#">Home</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">About</a></li>
+                    <li class="align-items"><a href="#home">Home</a></li>
+                    <li><a href="#service">Service</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">About</a></li>
                 </ul>
             </div>
         </nav>
@@ -25,7 +25,7 @@
                     <span class="font-banner">shape</span> & stay <br> healthy
                 </h1>
                 <p class="para">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
-                <div>
+                <div class="button">
                     <button><a href="#" class="btn-primary">Join Club Now</a></button>
                     <button><a href="#" class="download-btn">Download App</a></button>
                 </div>
