added two section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <button><a href="#" class="download-btn">Download App</a></button>
                 </div>
             </div>
-            <div class="align-items banner-img">
+            <div id="banner-img" class="align-items">
                 <img src="./images/Images 2.png" alt="">
                 <div class="tag-container box-1 align-items"><h1>500+</h1>
                 <p class="para">Free Workout Videos</p></div>
@@ -45,7 +45,64 @@
         </section>
    </header>
    <main>
-
+    <section id="habit" class="padding align-items">
+        <h3 class="h3">Change Your Habits</h3>
+        <p class="para">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <div class="display">
+            <div>
+                <img src="./images/image 3.png" alt="">
+                <h6 class="h6">Movement</h6>
+                <p class="para">We believe fitness should be accessible to everyone</p>
+            </div>
+            <div>
+                <img src="./images/image 2.png" alt="">
+                <h6 class="h6">Time</h6>
+                <p class="para">We believe fitness should be accessible to everyone</p>
+            </div>
+            <div>
+                <img src="./images/image 4.png" alt="">
+                <h6 class="h6">Practice</h6>
+                <p class="para">We believe fitness should be accessible to everyone</p>
+            </div>
+            <div>
+                <img src="./images/image 5.png" alt="">
+                <h6 class="h6">Weight Loss</h6>
+                <p class="para">We believe fitness should be accessible to everyone</p>
+            </div>
+        </div>
+    </section>
+    <section id="run" class="padding">
+        <div class="display">
+            <div><h3 class="h3">Run an Extra Mile Easily</h3>
+            <p class="para">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            <button class="btn-primary">Join Now</button></div>
+            <div><img src="./images/run.jpg" alt="" style="border-radius: 16px;"></div>
+        </div>
+    </section>
+    <section id="exercise" class="padding">
+        <h3 class="h3">Trainings and Exercises</h3>
+        <p class="para">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+        <div class="display">
+            <div class="pic-1">
+                <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+            <div class="pic-2">
+                <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+            <div class="pic-3">
+                <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+            <div class="pic-4">
+                <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+            <div class="pic-5">
+                <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+            <div class="pic-6">
+                <p>Leg Press: Works the quadriceps and glutes</p>
+            </div>
+        </div>
+    </section>
    </main>
    <footer>
 
