--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body class="body">
    <header id="banner" id="home" class="padding">   
         <nav class="navbar">
             <div class="fitness">Fitness</div>
             <div id="dropdown-menu">
-                <div class="dropdown"></div>
-                <div class="dropdown"></div>
-                <div class="dropdown"></div>
+                <div class="dropdown"><ion-icon name="menu" style="font-size: 40px;"></ion-icon></div>
                 
                 <ul class="navlist">
                     <li><a href="#home">Home</a></li>
