--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             </div>
         </nav>
         <section class="display">
-            <div>
+            <div class="banner-title">
                 <h1 class="banner-text">Get body in <br>
                     <span class="font-banner">shape</span> & stay <br> healthy
                 </h1>
                 <p class="para">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
                 <div class="button">
-                    <button><a href="#" class="btn-primary">Join Club Now</a></button>
+                    <button><a href="#" class="btn-primary">Join Club Now!</a></button>
                     <button><a href="#" class="download-btn">Download App</a></button>
                 </div>
             </div>
@@ -153,16 +153,20 @@
             <div class="bmi-cal">
                 <h4 class="h6">Calculate your BMI </h4>
                 <p class="para">we believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym.</p>
-                <form action="">
-                    <div class="display"><input type="text" placeholder="Height/cm">
-                    <input type="text" placeholder="Weight/kg"></div>
-                    <div class="display"><input type="text" placeholder="Age">
-                    <select id="sex">
+                <form>
+                    <div class="display">
+                        <input type="text" placeholder="Height/cm">
+                        <input type="text" placeholder="Weight/kg">
+                    </div>
+                    <div class="display">
+                        <input type="text" placeholder="Age">
+                        <select id="sex">
                         <option>Sex</option>
                         <option>Female</option>
                         <option>Male</option>
                         <option>Other</option>
-                    </select></div>
+                        </select>
+                    </div>
                     <div>
                         <select id="activity">
                         <option>Select an activity factor</option>
