--- a/index.html
+++ b/index.html
@@ -230,20 +230,22 @@
         <p class="para">We believe fitness should be accessible to everyone, <br> 
             everywhere, regardless of income or access to a gym. With <br>
             hundreds of professional workouts.</p></div>
-        <div> <h4 class="h4">Get Started</h4>
-        <ul class="para">
-            <li>Service</li>
-            <li>Contact Us</li>
-            <li>Affiliate Program</li>
-            <li>About Us</li>
-        </ul></div>
-        <div><h4 class="h4">Get Started</h4>
+        <div class="display">
+            <div> <h4 class="h4">Get Started</h4>
             <ul class="para">
-                <li>Fitness</li>
-                <li>Platform</li>
-                <li>Workout Library</li>
-                <li>App Design</li>
-            </ul>
+                <li>Service</li>
+                <li>Contact Us</li>
+                <li>Affiliate Program</li>
+                <li>About Us</li>
+            </ul></div>
+            <div><h4 class="h4">Get Started</h4>
+                <ul class="para">
+                    <li>Fitness</li>
+                    <li>Platform</li>
+                    <li>Workout Library</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
         </div>
     </section>
     <hr>
